# kawaii-fetch

./: Cargo.toml  README.md  kawaii.toml
src/: config.rs  main.rs
